[gd_scene format=3 uid="uid://dqqhbyuyyj1si"]

[ext_resource type="Script" uid="uid://cbnstocroycpv" path="res://scenes/death_screen/death_screen.gd" id="1_w8h0d"]
[ext_resource type="PackedScene" uid="uid://bg8ahamfcwj3i" path="res://nodes/background.tscn" id="2_eu6q6"]
[ext_resource type="Theme" uid="uid://b4knt16xuynoj" path="res://ui_themes/title_label_theme.tres" id="2_gpfue"]
[ext_resource type="Resource" uid="uid://byhm6xjsp2n7n" path="res://audio/music/eternity/eternity.tres" id="2_ohy05"]
[ext_resource type="PackedScene" uid="uid://bi1p1sul5tdrj" path="res://nodes/player/player_camera.tscn" id="3_cnyqg"]

[node name="DeathScreen" type="Node" unique_id=1599705515]
script = ExtResource("1_w8h0d")
music = ExtResource("2_ohy05")

[node name="UI" type="CanvasLayer" parent="." unique_id=1534563069]

[node name="Control" type="Control" parent="UI" unique_id=76655399]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Control" unique_id=1685492994]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 162.0
offset_right = -288.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuButton" type="Button" parent="UI/Control/Panel" unique_id=1107918992]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -46.0
offset_right = -8.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Back to duck menu"

[node name="Try again" type="Button" parent="UI/Control/Panel" unique_id=500844113]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -46.0
offset_right = 168.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Duck again
"

[node name="Title" type="Label" parent="UI/Control/Panel" unique_id=167173367]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 14.0
offset_right = 64.0
offset_bottom = 37.0
grow_horizontal = 2
theme = ExtResource("2_gpfue")
text = "ðŸ’€ðŸ¦†You ducked up!!ðŸ¦†ðŸ’€"
horizontal_alignment = 1

[node name="Score" type="Label" parent="UI/Control/Panel" unique_id=1281114059]
layout_mode = 0
offset_top = 94.0
offset_right = 40.0
offset_bottom = 117.0
text = "Time survived: 00m 00s"

[node name="Highscore" type="Label" parent="UI/Control/Panel" unique_id=35665994]
layout_mode = 0
offset_top = 117.0
offset_right = 181.0
offset_bottom = 140.0
text = "High score: 00m 00s"

[node name="Env" type="Node2D" parent="." unique_id=1117941202]

[node name="Background" parent="Env" unique_id=67694840 instance=ExtResource("2_eu6q6")]

[node name="PlayerCamera" parent="Env" unique_id=2141972906 instance=ExtResource("3_cnyqg")]

[connection signal="button_down" from="UI/Control/Panel/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="button_down" from="UI/Control/Panel/Try again" to="." method="_on_try_again_button_down"]
